updating the code with BgeEmbeddings

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,17 @@
-streamlit
-langchain-groq
-langchain-openai
-langchain-community
-langchain-core
-langchain-huggingface
-openai
-faiss-cpu
-PyPDF2
-python-dotenv
-flask
-langchain
-python-dotenv
-ipykernel
-langchain-community
-pypdf
-bs4
-arxiv
-pymupdf
-wikipedia
-langchain-text-splitters
-langchain-openai
-chromadb
-sentence_transformers
-langchain_huggingface
-faiss-cpu
-langchain_chroma
-duckdb
-pandas
-openai
-langchain-groq
-duckduckgo_search==5.3.1b1
-pymupdf
-arxiv
-wikipedia
-mysql-connector-python
-SQLAlchemy
-validators==0.28.1
-youtube_transcript_api
-unstructured
-pytube
-numexpr
-huggingface_hub
-mesop
-gunicorn
-anthropic
-google-generativeai
+streamlit>=1.31.0
+PyPDF2>=3.0.0
+langchain>=0.1.0
+langchain-openai>=0.0.5
+langchain-groq>=0.0.5
+faiss-cpu>=1.7.4
+python-dotenv>=1.0.0
+sentence-transformers>=2.2.2
+transformers>=4.36.2
+torch>=2.1.0
+numpy>=1.24.0
+regex>=2023.8.8
+protobuf>=4.25.1
+typing-extensions>=4.8.0
+requests>=2.31.0
+tqdm>=4.66.1
+pydantic>=2.5.2
