--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ PyPDF2>=3.0.0
 langchain>=0.1.0
 langchain-community>=0.0.10
 langchain-groq>=0.0.5
+langchain-huggingface>=0.0.5
 faiss-cpu>=1.7.4
 python-dotenv>=1.0.0
 sentence-transformers>=2.2.2
