--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
-streamlit==1.31.0
-PyPDF2==3.0.1
-langchain==0.1.0
-langchain-community==0.0.10
-langchain-groq==0.0.5
-langchain-huggingface==0.0.5
-faiss-cpu==1.7.4
-python-dotenv==1.0.0
-sentence-transformers==2.2.2
-transformers==4.36.2
-torch==2.1.2
-numpy==1.24.3
-regex==2023.8.8
-protobuf==4.25.1
-typing-extensions==4.8.0
-requests==2.31.0
-tqdm==4.66.1
-pydantic==2.5.2
+streamlit>=1.31.0
+PyPDF2>=3.0.0
+langchain>=0.1.0
+langchain-community>=0.0.10
+langchain-groq>=0.0.5
+langchain-huggingface>=0.0.5
+faiss-cpu>=1.7.4
+python-dotenv>=1.0.0
+sentence-transformers>=2.2.2
+transformers>=4.36.2
+torch>=2.1.0
+numpy>=1.24.0
+regex>=2023.8.8
+protobuf>=4.25.1
+typing-extensions>=4.8.0
+requests>=2.31.0
+tqdm>=4.66.1
+pydantic>=2.5.2
