--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ langchain>=0.1.0
 langchain-community>=0.0.10
 langchain-groq>=0.0.5
 langchain-huggingface>=0.0.5
+langchain-openai
 faiss-cpu>=1.7.4
 python-dotenv>=1.0.0
 sentence-transformers>=2.2.2
