--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ langchain-community>=0.0.10
 langchain-groq>=0.0.5
 langchain-huggingface>=0.0.5
 langchain-openai
-cohere
+langchain-cohere
 faiss-cpu>=1.7.4
 python-dotenv>=1.0.0
 sentence-transformers>=2.2.2
